--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,3 @@
 @import url('https://fonts.googleapis.com/css2?family=Jomhuria&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anek+Gurmukhi:wght@100..800&family=Jomhuria&display=swap');
+@import "tailwindcss";
