--- a/src/App.css
+++ b/src/App.css
@@ -20,4 +20,8 @@
   --color-suggestion:#D7E6D3;
   /* profile page subtitle green color */
   --color-profiletitle: #95BD8C;
+  /* Profile header */
+  --color-profileheader: #6A9161;
+  /* Profile bg green */
+  --color-profilebg: #D1DECE;
 }
