Change primary color variable to primarygreen and add navbar to profile page

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   --font-anek: "Anek Gurmukhi";
 
   /* Color Palette */
-  --color-primary: #48733F;
+  --color-primarygreen: #48733F;
   /* buttons: hover color */
   --color-secondary: #B6D7B0;
   /* buttons: not hovering color */
